<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.fraunhofer.iais.eis.ids.infomodel</groupId>
    <artifactId>demo</artifactId>
    <version>3.1.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Java Mapping of the IDS Information Model Ontology -->
        <dependency>
            <groupId>de.fraunhofer.iais.eis.ids.infomodel</groupId>
            <artifactId>java</artifactId>
            <version>3.1.0</version>
        </dependency>

        <!-- Optional dependency: validates Information Model Beans and serializes them to a JSON-LD representation -->
        <dependency>
            <groupId>de.fraunhofer.iais.eis.ids.infomodel</groupId>
            <artifactId>validation-serialization-provider</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>de.fraunhofer.iais.eis.ids</groupId>
            <artifactId>infomodel-serializer</artifactId>
            <version>3.1.0</version>
        </dependency>

        <!-- for HTTP URL validation -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.1</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>eis-public-repo</id>
            <name>maven-public</name>
            <url>http://maven.iais.fraunhofer.de/artifactory/eis-ids-public</url>
        </repository>
    </repositories>

</project>